Pre-delete dependency guard for DROP TABLE + Logical table drop support (#219)
* feat: pre-delete dependency guard for DROP TABLE

Refuses a DROP TABLE while an active Pipeline still references the
resource (as either source or sink), so dropping the underlying Kafka
topic / Venice store / MySQL table can't silently orphan a downstream
pipeline.

Validator framework, made Connection-aware:
- Validated.validate(Issues, Connection)              (was: validate(Issues))
- ValidatorProvider.validators(T, Connection)         (was: validators(T))
- ValidationService.validate(T, Issues, Connection)
- ValidationService.validateOrThrow(T, Connection)
- ValidationService.validateOrThrow(Collection<T>, Connection)
- ValidationService.validators(T, Connection)

PendingDelete<T> wrapper (hoptimator-api):
- Explicit "this is being deleted" signal so unrelated callers of
  validateOrThrow(source, connection) don't accidentally trigger
  pre-delete checks.
- Carries an optional selfOwnerUid so cascade-deleted children can be
  excluded from the dependent set.

K8s indexed lookup:
- PipelineDependencyLabels stamps `depends-on-<slug>` labels on every
  Pipeline CRD at create time, naming each source/sink. The slug is a
  16-char SHA-256 prefix of `<database>_<dot-joined-path>`; an
  annotation lists the full identifiers so a slug collision can be
  detected at check time.
- PipelineDependencyChecker uses a server-indexed label-selector list
  + annotation cross-check + selfOwnerUid filter.
- K8sPipelineDeployer threads sources/sink through and calls
  PipelineDependencyLabels.labelsFor / annotationFor at toK8sObject().
  K8sPipelineBundle and K8sMaterializedViewDeployer pass the data
  through.

Dispatch:
- K8sValidatorProvider returns a K8sPipelineDependencyValidator for
  PendingDelete<Source>; registered via
  META-INF/services/com.linkedin.hoptimator.ValidatorProvider.
- K8sPipelineDependencyValidator wraps PipelineDependencyChecker as a
  Validator.

DROP TABLE wiring:
- Hoptimat